# hometask2_9

./: authors.json  connection.py  create.py  main.py  model.py  pyproject.toml  quotes.json
