[tool.poetry]
name = "hometast2-9"
version = "0.1.0"
description = ""
authors = ["Mephod1y <mephodiy@i.ua>"]
readme = "README.md"
packages = [{include = "hometast2_9"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
